Revert 774c1c7 changes to HttpOathOtpLoginModule